// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pill /> should render a pill 1`] = `
<styled.span
  color="alert"
  size="small"
>
  Test
</styled.span>
`;

exports[`<Pill /> should render a pill with default values 1`] = `
<styled.span
  color="neutral"
  size="small"
>
  Test
</styled.span>
`;
